...
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RFN-wc-59w">
                                <rect key="frame" x="20" y="311" width="374" height="400"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rXs-vm-yVh">
                                        <rect key="frame" x="8" y="40" width="358" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="UserNameFld"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Muk-Px-RTR"/>
                                        </constraints>
                                        <color key="textColor" red="0.36078431370000003" green="0.36078431370000003" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" red="0.36078431370000003" green="0.36078431370000003" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Izg-a0-U8i">
                                        <rect key="frame" x="8" y="130" width="358" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PasswordFld"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="yGN-f8-KQj"/>
                                        </constraints>
                                        <color key="textColor" red="0.36078431370000003" green="0.36078431370000003" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <color key="textColor" red="0.36078431370000003" green="0.36078431370000003" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QHx-Es-Szk">
                                        <rect key="frame" x="87.5" y="220" width="199" height="44"/>
                                        <color key="backgroundColor" red="0.8980392157" green="0.67843137249999996" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="LoginBtn"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="1Ie-Td-jmC"/>
                                            <constraint firstAttribute="width" constant="199" id="lWK-Oz-LbW"/>
                                        </constraints>
                                        <state key="normal" title="Login">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="69a-cX-iUt">
                                        <rect key="frame" x="202" y="325" width="150" height="44"/>
                                        <color key="backgroundColor" red="0.8980392157" green="0.67843137249999996" blue="0.15686274510000001" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TouchIDButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="150" id="ahC-L0-CF2"/>
                                            <constraint firstAttribute="height" constant="44" id="dFy-OG-FN8"/>
                                        </constraints>
                                        <state key="normal" title="Touch ID">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                    <outlet property="dataSource" destination="Yhd-eD-uui" id="s5W-jy-Jvq"/>
                                    <outlet property="delegate" destination="Yhd-eD-uui" id="bSj-W6-Z7C"/>
                                </connections>
                            </collectionView>
                            <button opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ZH-Hb-NqX">
                                <rect key="frame" x="364" y="88" width="50" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="ProfileButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="EQY-mq-K26"/>
                                    <constraint firstAttribute="height" constant="50" id="vwc-8S-VaY"/>
                                </constraints>
                                <state key="normal" image="person.circle" catalog="system"/>
                                <userDefinedRuntimeAttributes>
...
